--- a/body-style.css
+++ b/body-style.css
@@ -1,15 +1,31 @@
 .text-header {
     color: red;
     font-size: 30px;
+    line-height: 1px;
 }
 
 .text-description {
     color: green;
     font-size: 20px;
+    line-height: 1px;
 }
 
 .image {
     width: 500px;
     height: auto;
     border-radius: 8px;
+}
+
+.card {
+    background-color: aliceblue;
+    text-align: center;
+    width: 500px;
+    border-radius: 8px;
+    margin: 0 auto;
+    padding: 20px
+}
+
+body {
+    margin-top: 10px;
+    background-color: darkgrey;
 }
